# Galaxy-Simulation

./: CMakeLists.txt  README.md  cores.h  gui.cpp  gui.vcxproj  gui.vcxproj.filters  matplotlibcpp.h  platform_compat.h  primitivas.h
data/: disk_table_safe.txt  halo_table.txt
data/curvas de rotacao/: com halo.txt  exemplo_com_corpos_teste.txt  exemplo_sem_corpos_teste.txt  sem halo.txt  somente halo.txt
data/curvas de rotacao/lixeira/: sem halo.txt
headers/: LOT_maker.py  contas_simbolicas.py  curva de rotacao.py  old.cpp  plotador_SPARC.py  plotador_curva_rotacao.ipynb  plotador_curva_rotacao.py  teste rng bojo.py  teste rng.py  unidades de medida.py
plots/: com_halo.txt  sem_halo.txt  velxraio_0.txt  velxraio_1.txt  velxraio_10.txt  velxraio_11.txt  velxraio_12.txt  velxraio_13.txt  velxraio_14.txt  velxraio_15.txt  velxraio_16.txt  velxraio_17.txt  velxraio_18.txt  velxraio_19.txt  velxraio_2.txt  velxraio_20.txt  velxraio_21.txt  velxraio_3.txt  velxraio_4.txt  velxraio_5.txt  velxraio_6.txt  velxraio_7.txt  velxraio_8.txt  velxraio_9.txt
x64/Debug/: gui.exe.recipe  gui.ilk  vc143.idb
x64/Debug/gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  gui.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Release/: gui.exe.recipe  gui.iobj  gui.ipdb
x64/Release/gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  gui.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
